--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sem_safe"
-version = "0.1.0"
+version = "0.1.1-pre"
 authors = ["Derick Eddington"]
 edition = "2021"
 rust-version = "1.64"  # The tests require 1.68
