Add `non_named::Semaphore` trait. Impl for `anonymous` & `unnamed`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "sem_safe"
 version = "0.2.0-pre"
 authors = ["Derick Eddington"]
 edition = "2021"
-rust-version = "1.64"  # The tests require 1.68
+rust-version = "1.75"
 description = "Safe usage of POSIX Semaphores (`sem_post`, `sem_wait`, etc)."
 keywords = ["semaphore", "synchronization", "signals", "unix", "no_std"]
 categories = ["api-bindings", "concurrency", "os::unix-apis", "no-std::no-alloc"]
