--- a/.clippy.toml
+++ b/.clippy.toml
@@ -1,1 +1,1 @@
-doc-valid-idents = ["x86_64", "NixOS", "NetBSD", "OpenIndiana", ".."]
+doc-valid-idents = ["x86_64", "NixOS", "NetBSD", "OpenBSD", "OpenIndiana", ".."]
