--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sem_safe"
-version = "0.2.0-pre"
+version = "0.2.0"
 authors = ["Derick Eddington"]
 edition = "2021"
 rust-version = "1.75"
